speed instead of fps, extra examples, scrollbar fix in firefox, drawing on move

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -9,15 +9,16 @@ body {
 }
 
 #life {
-  height: 100vh;
+  height: 100%;
 
   aside {
     float: right; 
     padding: 1em;
 
     width: 25%;
+    height: 100vh;
     font-size: 0.7em;
-    // height: 100%;
+    overflow: scroll;
 
     h1 {
       font-size: 4em;
